# lab2_cpp

./: .gitignore  CMakeLists.txt  ZVIT.md  results_O0.txt  results_O2.txt  results_O3.txt
include/: BenchmarkResult.h  BenchmarkRunner.h  DataGenerator.h  ExperimentRunner.h  IMergeStrategy.h  OutputFormatter.h  ParallelMergeStrategy.h  SequentialMergeStrategy.h  SystemInfo.h  Timer.h
src/: BenchmarkResult.cpp  BenchmarkRunner.cpp  DataGenerator.cpp  ExperimentRunner.cpp  OutputFormatter.cpp  ParallelMergeStrategy.cpp  SequentialMergeStrategy.cpp  SystemInfo.cpp  main.cpp
